--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "find-and-replace",
+  "name": "find-and-replace--rename-dir",
   "main": "./lib/find",
-  "description": "Find and replace within buffers and across the project.",
-  "version": "0.219.0",
+  "description": "Atom's core find-and-replace package with the ability to rename directories (files and folders).",
+  "version": "0.0.0",
   "license": "MIT",
   "activationCommands": {
     "atom-workspace": [
@@ -26,7 +26,7 @@
       "find-and-replace:clear-history"
     ]
   },
-  "repository": "https://github.com/atom/find-and-replace",
+  "repository": "https://github.com/atom/find-and-replace--rename-dir",
   "engines": {
     "atom": "*"
   },
